[package]
name = "login"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_runtime = "0.13.0"
lambda_http = "0.14.0"
tokio = { version = "1.36", features = ["full"] }
aws-config = "1.1.5"
aws-sdk-dynamodb = "1.15.0"
aws-sdk-ses = "1.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
jsonwebtoken = "9.2.0"
bcrypt = "0.17.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
http = "1.2.0"
thiserror = "2.0.11"
url = "2.5.0"
argon2 = "0.5.3"
rand = "0.8"
password-hash = "0.5"
rand_core = "0.6"